@@ -1,7 +1,10 @@
 package Test::File::Contents;
 
+use 5.6.2;
 use warnings;
 use strict;
+
+=encoding utf8
 
 =head1 Name
 
@@ -48,23 +51,71 @@ expect them to be.
 
 =head1 Interface
 
+=head2 Options
+
+These test functions take an optional hash reference of options which may
+include one or more of these options:
+
+=over
+
+=item C<encoding>
+
+The encoding in which the file is encoded. This will be used in an I/O layer
+to read in the file, so that it can be properly decoded to Perl's internal
+representation. Examples include C<UTF-8>, C<iso-8859-3>, and C<cp1252>. See
+L<Encode::Supported> for a list of supported encodings. May also be specified
+as a layer, such as ":utf8" or ":raw". See L<perlio> for a complete list of
+layers.
+
+Note that it's important to specify the encoding if you have non-ASCII
+characters in your file. And the value to be compared against (the string
+argument to C<file_contents_eq()> and the regular expression argument to
+C<file_contents_like()>, for example, must be decoded to Perl's internal
+form. The simplest way to do so use to put
+
+  use utf8;
+
+In your test file and write it all in C<UTF-8>. For example:
+
+  use utf8;
+  use Test::More tests => 1;
+  use Test::File::Contents;
+
+  file_contents_eq('utf8.txt',   'ååå', { encoding => 'UTF-8' });
+  file_contents_eq('latin1.txt', 'ååå', { encoding => 'UTF-8' });
+
+=back
+
 =head2 Test Functions
 
 =head3 file_contents_eq
 
   file_contents_eq $file, $string, $description;
+  file_contents_eq $file, $string, { encoding => 'UTF-8' };
+  file_contents_eq $file, $string, { encoding => ':bytes' }, $description;
 
 Checks that the file's contents are equal to a string. Pass in a Unix-style
-file name and it will be converted for the local file system. The old name for
-this function, C<file_contents_is>, remains as an alias.
+file name and it will be converted for the local file system. Supported
+L<options|/Options>:
+
+=over
+
+=item C<encoding>
+
+=back
+
+The old name for this function, C<file_contents_is>, remains as an
+alias.
 
 =cut
 
-sub file_contents_eq($$;$) {
-    my ($file, $string, $desc) = @_;
+sub file_contents_eq($$;$$) {
+    my ($file, $string, $desc, $opts) = @_;
+    ($opts, $desc) = ($desc, $opts) if ref $desc eq 'HASH';
     return _compare(
         $file,
         sub { shift eq $string },
+        $opts,
         $desc || "$file contents equal to string",
         "File $file contents not equal to '$string'",
     );
@@ -75,18 +126,30 @@ sub file_contents_eq($$;$) {
 =head3 file_contents_ne
 
   file_contents_ne $file, $string, $description;
+  file_contents_ne $file, $string, { encoding => 'UTF-8' };
+  file_contents_ne $file, $string, { encoding => ':bytes' }, $description;
 
 Checks that the file's contents do not equal a string. Pass in a Unix-style
-file name and it will be converted for the local file system. The old name for
-this function, C<file_contents_isnt>, remains as an alias.
+file name and it will be converted for the local file system. Supported
+L<options|/Options>:
+
+=over
+
+=item C<encoding>
+
+=back
+
+The old name for this function, C<file_contents_isnt>, remains as an alias.
 
 =cut
 
-sub file_contents_ne($$;$) {
-    my ($file, $string, $desc) = @_;
+sub file_contents_ne($$;$$) {
+    my ($file, $string, $desc, $opts) = @_;
+    ($opts, $desc) = ($desc, $opts) if ref $desc eq 'HASH';
     return _compare(
         $file,
         sub { shift ne $string },
+        $opts,
         $desc || "$file contents not equal to string",
         "File $file contents equal to '$string'",
     );
@@ -97,17 +160,28 @@ sub file_contents_ne($$;$) {
 =head3 file_contents_like
 
   file_contents_like $file, qr/foo/, $description;
+  file_contents_like $file, qr/foo/, { encoding => 'UTF-8' };
+  file_contents_like $file, qr/foo/, { encoding => ':bytes' }, $description;
 
 Checks that the contents of a file match a regular expression. The regular
 expression must be passed as a regular expression object created by C<qr//>.
+Supported L<options|/Options>:
+
+=over
+
+=item C<encoding>
+
+=back
 
 =cut
 
-sub file_contents_like($$;$) {
-    my ($file, $regex, $desc) = @_;
+sub file_contents_like($$;$$) {
+    my ($file, $regex, $desc, $opts) = @_;
+    ($opts, $desc) = ($desc, $opts) if ref $desc eq 'HASH';
     return _compare(
         $file,
         sub { shift =~ /$regex/ },
+        $opts,
         $desc || "$file contents match regex",
         "File $file contents do not match /$regex/",
     );
@@ -116,18 +190,28 @@ sub file_contents_like($$;$) {
 =head3 file_contents_unlike
 
   file_contents_unlike $file, qr/foo/, $description;
+  file_contents_unlike $file, qr/foo/, { encoding => 'UTF-8' };
+  file_contents_unlike $file, qr/foo/, { encoding => ':bytes' }, $description;
 
 Checks that the contents of a file I<do not> match a regular expression. The
 regular expression must be passed as a regular expression object created by
-C<qr//>.
+C<qr//>. Supported L<options|/Options>:
+
+=over
+
+=item C<encoding>
+
+=back
 
 =cut
 
-sub file_contents_unlike($$;$) {
-    my ($file, $regex, $desc) = @_;
+sub file_contents_unlike($$;$$) {
+    my ($file, $regex, $desc, $opts) = @_;
+    ($opts, $desc) = ($desc, $opts) if ref $desc eq 'HASH';
     return _compare(
         $file,
         sub { shift !~ /$regex/ },
+        $opts,
         $desc || "$file contents do not match regex",
         "File $file contents match /$regex/",
     );
@@ -136,109 +220,105 @@ sub file_contents_unlike($$;$) {
 =head3 file_md5sum
 
   file_md5sum $file, $md5sum, $description;
+  file_md5sum $file, $md5sum, { encoding => 'UTF-8' };
+  file_md5sum $file, $md5sum, { encoding => ':bytes' }, $description;
 
 Checks whether a file matches a given MD5 checksum. The checksum should be
 provided as a hex string, for example, C<6df23dc03f9b54cc38a0fc1483df6e21>.
 Pass in a Unix-style file name and it will be converted for the local file
-system.
+system. Supported L<options|/Options>:
+
+=over
+
+=item C<encoding>
+
+Probably not useful unless left unset or set to C<:raw>.
+
+=back
 
 =cut
 
-sub file_md5sum($$;$) {
+sub file_md5sum($$;$$) {
     my $arg_file = shift;
     my $file = $arg_file =~ m{/}
         ? File::Spec->catfile(split m{/}, $arg_file)
         : $arg_file;
-    my ($md5sum, $desc) = @_;
-    $desc ||= "$arg_file has md5sum";
-    local *IN;
-    if (open IN, $file) {
-        my $ctx = undef;
-        $ctx = Digest::MD5->new;
-        $ctx->addfile(*IN);
-        my $result = $ctx->hexdigest;
-        if ($result eq $md5sum) {
-            $Test->ok(1, $desc);
-            return 1;
-        } else {
-            $Test->ok(0, $desc);
-            $Test->diag("    File $arg_file has md5sum $result, not $md5sum");
-            return 0;
-        }
-        close IN;
-    } else {
-        $Test->ok(0, $desc);
-        $Test->diag("    Could not open file $file: $!");
-        return 0;
-    }
+    my ($md5sum, $desc, $opts) = @_;
+    ($opts, $desc) = ($desc, $opts) if ref $desc eq 'HASH';
+    return _compare(
+        $file,
+        sub { Digest::MD5->new->add(shift)->hexdigest eq $md5sum },
+        $opts,
+        $desc || "$arg_file has md5sum",
+        "File $arg_file does not have md5 checksum $md5sum",
+    );
 }
 
 =head3 file_contents_identical
 
   file_contents_identical $file1, $file2, $description;
+  file_contents_identical $file1, $file2, { encoding => 'UTF-8' };
+  file_contents_identical $file1, $file2, { encoding => ':bytes' }, $description;
 
 Tests that the contents of two files are identical. Pass in a Unix-style file
-name and it will be converted for the local file system.
+name and it will be converted for the local file system. Supported
+L<options|/Options>:
+
+=over
+
+=item C<encoding>
+
+=back
 
 =cut
 
-sub file_contents_identical($$;$) {
-    my ($f1, $f2) = (shift, shift);
-    my $file1 = $f1 =~ m{/} ? File::Spec->catfile(split m{/}, $f1) : $f1;
-    my $file2 = $f2 =~ m{/} ? File::Spec->catfile(split m{/}, $f2) : $f2;
-    my $desc = shift || "$f1 and $f2 contents identical";
+sub file_contents_identical($$;$$) {
+    my ($f1, $f2, $desc, $opts) = @_;
+    ($opts, $desc) = ($desc, $opts) if ref $desc eq 'HASH';
+    $desc ||= "$f1 and $f2 contents identical";
 
-    my $ok;
-    local(*IN1, *IN2);
-    if (open IN1, $file1) {
-        local $/ = undef;
-        my $content1 = <IN1>;
-        if (open IN2, $file2) {
-            my $content2 = <IN2>;
-            if ($content1 eq $content2) {
-                $Test->ok(1, $desc);
-                return 1;
-            } else {
-                $Test->ok(0, $desc);
-                $Test->diag("    Files $f1 and $f2 are not identical.");
-                return 0;
-            }
-        } else {
-            $Test->ok(0, $desc);
-            $Test->diag("    Could not open file $file1: $!");
-            return 0;
-        }
-    } else {
-        $Test->ok(0, $desc);
-        $Test->diag("    Could not open file $file2: $!");
-        return 0;
+    my @contents;
+    for my $f ($f1, $f2) {
+        my $file = $f =~ m{/} ? File::Spec->catfile(split m{/}, $f) : $f;
+        push @contents => _slurp($file, $opts->{encoding});
+        next if defined $contents[-1];
+        return $Test->ok(0, $desc)
+            || $Test->diag("    Could not open file $file: $!");
     }
+
+    return $Test->ok(
+        $contents[0] eq $contents[1],
+        $desc || "$f1 and $f2 contents identical",
+    ) || $Test->diag("    Files $f1 and $f2 are not identical.");
 }
 
 sub _compare {
     my $file = $_[0] =~ m{/}
         ? File::Spec->catfile(split m{/}, shift)
         : shift;
-    my ($code, $desc, $err) = @_;
-    my $ok;
+    my ($code, $opts, $desc, $err) = @_;
     local $Test::Builder::Level = 2;
-    local *IN;
-    if (open IN, $file) {
-        local $/ = undef;
-        if ($code->(<IN>)) {
-            $Test->ok(1, $desc);
-            return 1;
-        } else {
-            $Test->ok(0, $desc);
-            $Test->diag("    $err");
-            return 0;
-        }
+    my $contents = _slurp($file, $opts->{encoding});
+    if (defined $contents) {
+        return $Test->ok(scalar $code->($contents), $desc)
+            || $Test->diag("    $err");
     } else {
-        $Test->ok(0, $desc);
-        $Test->diag("    Could not open file $file: $!");
-        return 0;
+        return $Test->ok(0, $desc)
+            || $Test->diag("    Could not open file $file: $!");
     }
 }
+
+sub _slurp {
+    my ($file, $encoding) = @_;
+    my $layer = !$encoding  ? ''
+        : $encoding =~ '^:' ? $encoding
+        :                     ":encoding($encoding)";
+    open my $fh, "<$layer", $file or return;
+    return '' if eof $fh;
+    local $/;
+    return <$fh>;
+}
+
 
 1;
 
